# electronicvoting

./: .env.example  .gitignore  ADMIN_SETUP_GUIDE.md  DEPLOYMENT.md  ENHANCEMENTS_2025.md  PLATFORM_COMPLETE.md  README.md  SCALING.md  docker-compose.production.yaml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/admin/: README.md  middleware.ts  package.json  postcss.config.js
apps/admin/src/app/: layout.tsx  page.tsx
apps/admin/src/app/(auth)/: layout.tsx
apps/admin/src/app/dashboard/: page.tsx
apps/admin/src/app/elections/: page.tsx
apps/admin/src/app/paper-ballots/: page.tsx
apps/admin/src/app/settings/: page.tsx
apps/admin/src/app/unauthorized/: page.tsx
apps/admin/src/app/voters/: page.tsx
apps/admin/src/components/: ElectionOverview.tsx  PolicyDesigner.tsx  Providers.tsx
apps/api/: Dockerfile  README.md  main.py  pyproject.toml
apps/api/docs/: OCR_SETUP.md
apps/api/src/observernet_api/: __init__.py  app.py
apps/api/src/observernet_api/api/v1/: admin.py  admin_config.py  elections.py  paper.py  privacy.py  public.py  results.py  router.py  verification.py  voting.py  websocket.py  whatsapp.py
apps/api/src/observernet_api/config/: settings.py
apps/api/src/observernet_api/database/: __init__.py  connection.py  models.py
apps/api/src/observernet_api/middleware/: rate_limit.py
apps/api/src/observernet_api/privacy/: __init__.py  breach.py  dsar_automation.py  jurisdiction.py  models.py  retention.py  rights_engine.py
apps/api/src/observernet_api/security/: __init__.py  auth.py  headers.py
apps/api/src/observernet_api/services/: crypto.py  didit.py  email.py  external_elections.py  fabric.py  fabric_gateway.py  mixnet.py  ocr.py  sms.py  zk_proof.py
apps/api/src/observernet_api/webhooks/: didit.py  router.py
apps/api/tests/: __init__.py  conftest.py  test_admin.py  test_elections.py  test_paper_ballots.py  test_privacy.py  test_public.py  test_voting.py
apps/api/tests/integration/: test_e2e_voting_flow.py
apps/chain/: README.md  docker-compose.dev.yaml
apps/chain/chaincode/ballot_cc/: contract.go  go.mod
apps/chain/scripts/: deploy-chaincode.sh  dev-down.sh  dev-up.sh
apps/docs/: README.md  architecture.md  load-testing.md
apps/docs/playbooks/: anomaly-investigation.md
apps/docs/runbooks/: fabric.md
apps/observer/: README.md  next.config.js  package.json  tailwind.config.js
apps/observer/src/app/: globals.css  layout.tsx  page.tsx
apps/superadmin/: README.md  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/superadmin/src/app/: layout.tsx  page.tsx
apps/superadmin/src/components/: FabricStatus.tsx  ProviderChecklist.tsx  Providers.tsx
apps/verifier/: Dockerfile  README.md  main.py  pyproject.toml
apps/verifier/src/verifier/: app.py
apps/web/: .eslintrc.js  README.md  middleware.ts  next.config.mjs  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: Providers.tsx  ReceiptLookup.tsx
apps/web/src/i18n/: request.ts
apps/web/src/styles/: globals.css
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/observernet_worker/: celery_app.py  crypto_worker.py
infrastructure/: README.md
infrastructure/k8s/helm/api/: Chart.yaml  values.yaml
infrastructure/k8s/production/: api-deployment.yaml  redis-cluster.yaml  worker-deployment.yaml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
(+72 files in other folders)
