[tool.poetry]
name = "observernet-verifier"
version = "0.1.0"
description = "Service coordinating Didit sessions and Fabric subject registration"
authors = ["ObserverNet Platform <platform@example.org>"]
packages = [{ include = "verifier", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
uvicorn = "0.29.0"
httpx = "0.27.0"
redis = "5.0.3"
pydantic = "2.6.3"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
