[tool.poetry]
name = "observernet-worker"
version = "0.1.0"
description = "Background worker for OCR, notifications, and Fabric commits"
authors = ["ObserverNet Platform <platform@example.org>"]
packages = [{ include = "observernet_worker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
celery = "5.3.6"
redis = "5.0.3"
boto3 = "1.34.34"
pillow = "10.2.0"
pytesseract = "0.3.10"
httpx = "0.27.0"
openai = "1.14.3"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
